trafficM_Kiali_GW_VS_DR/isti/king/kinggateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali-ingress-gateway
  namespace: istio-system

spec: 

  selector:
    app: istio-ingressgateway
    istio: ingressgateway


  servers:	
  - port:
      number: 31400
      name: http-kiali
      protocol: HTTP
    hosts:
    - "*"
